force-app/main/default/objects/Gestionale_Economico__c/Gestionale_Economico__c.object-meta.xml
<CustomObject>
    <label>Gestionale Economico</label>
    <nameField>
        <displayFormat>GE-{00000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gestionali Economici</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>