force-app/main/default/objects/Gestionale_Economico__c/fields/Bloccato_fornitore_il__c.field-meta.xml
<CustomField>
    <fullName>Bloccato_fornitore_il__c</fullName>
    <label>Bloccato fornitore il</label>
    <length>255</length>
    <type>Text</type>
</CustomField>