force-app/main/default/objects/Gestionale_Economico__c/fields/Caparra_50__c.field-meta.xml
<CustomField>
    <fullName>Caparra_50__c</fullName>
    <formula>(Opportunity__r.SyncedQuote.Subtotal +  Opportunity__r.SyncedQuote.Tax ) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caparra 50% Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>