force-app/main/default/objects/Gestionale_Economico__c/fields/Caparra_versata_il_giorno__c.field-meta.xml
<CustomField>
    <fullName>Caparra_versata_il_giorno__c</fullName>
    <label>Caparra versata il giorno</label>
    <type>Date</type>
</CustomField>