force-app/main/default/objects/Gestionale_Economico__c/fields/Coinvolgimento_fornitore_fine__c.field-meta.xml
<CustomField>
    <fullName>Coinvolgimento_fornitore_fine__c</fullName>
    <inlineHelpText>Data in cui termina il coinvolgimento del fornitore nell&apos;evento. Deve essere successiva alla data inizio, compresa tra le date dell&apos;evento e si può inserire solo se c&apos;è la data di inizio.</inlineHelpText>
    <label>Coinvolgimento fornitore - fine</label>
    <type>Date</type>
</CustomField>