force-app/main/default/objects/Gestionale_Economico__c/fields/Coinvolgimento_fornitore_inizio__c.field-meta.xml
<CustomField>
    <fullName>Coinvolgimento_fornitore_inizio__c</fullName>
    <inlineHelpText>Data in cui inizia il coinvolgimento del fornitore nell&apos;evento, deve essere compresa tra le date dell&apos;evento. Se coinvolto un solo giorno basta la data di inizio.</inlineHelpText>
    <label>Coinvolgimento fornitore - inizio</label>
    <type>Date</type>
</CustomField>