force-app/main/default/objects/Gestionale_Economico__c/fields/Commissione_10_dovuta__c.field-meta.xml
<CustomField>
    <fullName>Commissione_10_dovuta__c</fullName>
    <label>Commissione 10% dovuta?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sì</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>