force-app/main/default/objects/Gestionale_Economico__c/fields/Commissione_10_totale_netto__c.field-meta.xml
<CustomField>
    <fullName>Commissione_10_totale_netto__c</fullName>
    <formula>IF(
				ISPICKVAL ( Commissione_10_dovuta__c , &apos;Sì&apos;),  Opportunity__r.Amount / 10, 0
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissione 10% totale netto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>