force-app/main/default/objects/Gestionale_Economico__c/fields/Cooperativa__c.field-meta.xml
<CustomField>
    <fullName>Cooperativa__c</fullName>
    <formula>Fornitore__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cooperativa</label>
    <type>Text</type>
</CustomField>