force-app/main/default/objects/Gestionale_Economico__c/fields/Data_caparra_e_firma__c.field-meta.xml
<CustomField>
    <fullName>Data_caparra_e_firma__c</fullName>
    <label>Data caparra e firma</label>
    <type>Date</type>
</CustomField>