force-app/main/default/objects/Gestionale_Economico__c/fields/Data_comunicazione_Ispettorato_Lavoro__c.field-meta.xml
<CustomField>
    <fullName>Data_comunicazione_Ispettorato_Lavoro__c</fullName>
    <label>Data comunicazione Ispettorato Lavoro</label>
    <type>Date</type>
</CustomField>