force-app/main/default/objects/Gestionale_Economico__c/fields/Fattura_e_anno_caparra_2__c.field-meta.xml
<CustomField>
    <fullName>Fattura_e_anno_caparra_2__c</fullName>
    <label>Fattura e anno caparra (2)</label>
    <type>Date</type>
</CustomField>