force-app/main/default/objects/Gestionale_Economico__c/fields/Fattura_ricevuta_del__c.field-meta.xml
<CustomField>
    <fullName>Fattura_ricevuta_del__c</fullName>
    <label>Fattura del</label>
    <type>Date</type>
</CustomField>