force-app/main/default/objects/Gestionale_Economico__c/fields/Fornitore__c.field-meta.xml
<CustomField>
    <fullName>Fornitore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fornitore</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gestionali Economici</relationshipLabel>
    <relationshipName>Gestionali_Economici</relationshipName>
    <type>Lookup</type>
</CustomField>