force-app/main/default/objects/Gestionale_Economico__c/fields/Importo_caparra__c.field-meta.xml
<CustomField>
    <fullName>Importo_caparra__c</fullName>
    <label>Importo caparra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>