force-app/main/default/objects/Gestionale_Economico__c/fields/IVA_Applicata__c.field-meta.xml
<CustomField>
    <fullName>IVA_Applicata__c</fullName>
    <label>IVA Applicata</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IVA_applicata</valueSetName>
    </valueSet>
</CustomField>