force-app/main/default/objects/Gestionale_Economico__c/fields/IVA_scorporata__c.field-meta.xml
<CustomField>
    <fullName>IVA_scorporata__c</fullName>
    <formula>IF (
ISPICKVAL ( IVA_Applicata__c, &apos;IVA Esente&apos;) || ISBLANK (TEXT(IVA_Applicata__c)), 0,

IF (
ISPICKVAL ( IVA_Applicata__c, &apos;IVA al 10%&apos;), Prezzo_con_IVA__c - (Prezzo_con_IVA__c / 1.1),
Prezzo_con_IVA__c - (Prezzo_con_IVA__c / 1.22)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVA scorporata</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>