force-app/main/default/objects/Gestionale_Economico__c/fields/Modalita_pagamento_fornitore__c.field-meta.xml
<CustomField>
    <fullName>Modalita_pagamento_fornitore__c</fullName>
    <label>Modalità pagamento fornitore</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IVA_Applicata__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Modalita_pagamento_fornitore</valueSetName>
    </valueSet>
</CustomField>