force-app/main/default/objects/Gestionale_Economico__c/fields/N_fattura__c.field-meta.xml
<CustomField>
    <fullName>N_fattura__c</fullName>
    <label>N° fattura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>