force-app/main/default/objects/Gestionale_Economico__c/fields/N_preventivo_fornitore_accettato__c.field-meta.xml
<CustomField>
    <fullName>N_preventivo_fornitore_accettato__c</fullName>
    <label>N° preventivo fornitore accettato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>