force-app/main/default/objects/Gestionale_Economico__c/fields/Nome_fornitore_incaricato__c.field-meta.xml
<CustomField>
    <fullName>Nome_fornitore_incaricato__c</fullName>
    <label>Nome fornitore incaricato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>