force-app/main/default/objects/Gestionale_Economico__c/fields/Numero_documento_Ispettorato_del_Lavoro__c.field-meta.xml
<CustomField>
    <fullName>Numero_documento_Ispettorato_del_Lavoro__c</fullName>
    <label>Numero documento Ispettorato del Lavoro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>