force-app/main/default/objects/Gestionale_Economico__c/fields/Pagamento_caparra_effettuato_il__c.field-meta.xml
<CustomField>
    <fullName>Pagamento_caparra_effettuato_il__c</fullName>
    <label>Pagamento caparra effettuato il</label>
    <type>Date</type>
</CustomField>