force-app/main/default/objects/Gestionale_Economico__c/fields/Pagamento_fornitore_altro_specificare__c.field-meta.xml
<CustomField>
    <fullName>Pagamento_fornitore_altro_specificare__c</fullName>
    <label>Pagamento fornitore (altro) specificare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>