force-app/main/default/objects/Gestionale_Economico__c/fields/Pagamento_saldo_unico_effettuato_il__c.field-meta.xml
<CustomField>
    <fullName>Pagamento_saldo_unico_effettuato_il__c</fullName>
    <label>Pagamento saldo/unico effettuato il</label>
    <type>Date</type>
</CustomField>