force-app/main/default/objects/Gestionale_Economico__c/fields/Pagata_il__c.field-meta.xml
<CustomField>
    <fullName>Pagata_il__c</fullName>
    <label>Pagata il</label>
    <type>Date</type>
</CustomField>