force-app/main/default/objects/Gestionale_Economico__c/fields/Preventivo__c.field-meta.xml
<CustomField>
    <fullName>Preventivo__c</fullName>
    <label>Preventivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>