force-app/main/default/objects/Gestionale_Economico__c/fields/Prezzo_con_IVA__c.field-meta.xml
<CustomField>
    <fullName>Prezzo_con_IVA__c</fullName>
    <label>Prezzo con IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>