force-app/main/default/objects/Gestionale_Economico__c/fields/Prezzo_lordo_fornitore__c.field-meta.xml
<CustomField>
    <fullName>Prezzo_lordo_fornitore__c</fullName>
    <label>Totale fornitore IVA esclusa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>