force-app/main/default/objects/Gestionale_Economico__c/fields/Ricevuta_del__c.field-meta.xml
<CustomField>
    <fullName>Ricevuta_del__c</fullName>
    <label>Ricevuta del</label>
    <type>Date</type>
</CustomField>