force-app/main/default/objects/Gestionale_Economico__c/fields/Ricevuta_per_esteso__c.field-meta.xml
<CustomField>
    <fullName>Ricevuta_per_esteso__c</fullName>
    <formula>TEXT(Year(Ricevuta_del__c)) + &apos; &apos; +
CASE(MONTH(Ricevuta_del__c),
1, &apos;Gennaio&apos;,
2, &apos;Febbraio&apos;,
3, &apos;Marzo&apos;,
4, &apos;Aprile&apos;,
5, &apos;Maggio&apos;,
6, &apos;Giugno&apos;,
7, &apos;Luglio&apos;,
8, &apos;Agosto&apos;,
9, &apos;Settembre&apos;,
10, &apos;Ottobre&apos;,
11, &apos;Novembre&apos;,
12, &apos;Dicembre&apos;,
&quot; &quot;) + &apos; &apos; + TEXT(Day(Ricevuta_del__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ricevuta per esteso</label>
    <type>Text</type>
</CustomField>