force-app/main/default/objects/Gestionale_Economico__c/fields/Ritenuta__c.field-meta.xml
<CustomField>
    <fullName>Ritenuta__c</fullName>
    <label>Ritenuta</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IVA_Applicata__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Ritenuta</valueSetName>
    </valueSet>
</CustomField>