force-app/main/default/objects/Gestionale_Economico__c/fields/Sollecito_fattura__c.field-meta.xml
<CustomField>
    <fullName>Sollecito_fattura__c</fullName>
    <label>Sollecito fattura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>