force-app/main/default/objects/Gestionale_Economico__c/fields/Sollecito_ricevuta__c.field-meta.xml
<CustomField>
    <fullName>Sollecito_ricevuta__c</fullName>
    <label>Sollecito ricevuta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>