force-app/main/default/objects/Gestionale_Economico__c/fields/Stato_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Stato_Pagamento__c</fullName>
    <label>Stato Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pagare</fullName>
            </value>
            <value>
                <fullName>Caparrato</fullName>
            </value>
            <value>
                <fullName>Attesa fatt</fullName>
            </value>
            <value>
                <fullName>Opzionato</fullName>
            </value>
            <value>
                <fullName>Pagato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>