force-app/main/default/objects/Gestionale_Economico__c/fields/Tipo_di_fornitore__c.field-meta.xml
<CustomField>
    <fullName>Tipo_di_fornitore__c</fullName>
    <label>Tipo di fornitore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>