force-app/main/default/objects/Gestionale_Economico__c/fields/Totale_Iva_inclusa__c.field-meta.xml
<CustomField>
    <fullName>Totale_Iva_inclusa__c</fullName>
    <formula>IF (
				Prezzo_lordo_fornitore__c + IVA__c != 0, Prezzo_lordo_fornitore__c + IVA__c, Prezzo_con_IVA__c
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Iva inclusa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>