force-app/main/default/objects/Gestionale_Economico__c/validationRules/Data_Comunicazione_Vuota.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_Comunicazione_Vuota</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
				!ISNEW(),
				ISPICKVAL( Modalita_pagamento_fornitore__c , &apos;Prestazione Occasionale&apos;),
				ISBLANK ( Data_comunicazione_Ispettorato_Lavoro__c)
				)</errorConditionFormula>
    <errorDisplayField>Data_comunicazione_Ispettorato_Lavoro__c</errorDisplayField>
    <errorMessage>In caso di prestazione occasionale, è necessario inserire la data di comunicazione all&apos;Ispettorato del Lavoro</errorMessage>
</ValidationRule>