force-app/main/default/objects/Gestionale_Economico__c/validationRules/Pagamento_Fornitore_Specificare_Altro.validationRule-meta.xml
<ValidationRule>
    <fullName>Pagamento_Fornitore_Specificare_Altro</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
				!ISNEW(),
    ISPICKVAL ( Modalita_pagamento_fornitore__c , &apos;Altro (Specificare)&apos;),  
    ISBLANK (Pagamento_fornitore_altro_specificare__c)
				)</errorConditionFormula>
    <errorDisplayField>Pagamento_fornitore_altro_specificare__c</errorDisplayField>
    <errorMessage>Se si indica &quot;Altro&quot; come modalità di pagamento del fornitore, bisogna specificare qual è la modalità di pagamento</errorMessage>
</ValidationRule>