force-app/main/default/objects/Gestionale_Economico__c/validationRules/Solo_un_prezzo.validationRule-meta.xml
<ValidationRule>
    <fullName>Solo_un_prezzo</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
				!ISBLANK(Prezzo_lordo_fornitore__c),  
				!ISBLANK( Prezzo_con_IVA__c)
				)</errorConditionFormula>
    <errorMessage>Puoi compilare solo un campo a scelta tra prezzo con IVA e prezzo senza IVA</errorMessage>
</ValidationRule>